# sql-generation

./: Cargo.toml
src/: cli_add.rs  cli_config.rs  cli_info.rs  cli_init.rs  cli_remove.rs  consts.rs  main.rs
